--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -85,8 +85,7 @@ search-child-objects: true # true / false - if true, child objects will appear o
 navbar-color: "navbar-dark"
 # navbar background color
 # Choose from bg-primary, bg-secondary, bg-success, bg-danger, bg-warning, bg-info, bg-light, bg-dark, bg-white
-navbar-background: "bg-success"
-navbar-style: "background-color: #690909;"
+navbar-background: "#690909"
 
 # BOOTSWATCH THEMES
 # You can replace the standard Bootstrap theme with a Bootswatch (https://github.com/thomaspark/bootswatch) option
