--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ source-code: https://github.com/CollectionBuilder/collectionbuilder-sheets
 # title of site appears in banner
 title: Fairy Tales 
 # tagline, a short phrase that will appear throughout the site in the top banner
-tagline: illustrations from fairy tales with curse narratives
+tagline: Countless Curses
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
 description: "A collection of fairy tale/folktale illustrations from the mid 19th-20th century, containing curse narratives."
